Add tab with all authors